--- a/Patientenverwaltung/src/ch/gbssg/app/ila/doctor/Doctor.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/ila/doctor/Doctor.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="166.0" layoutY="92.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <VBox prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
             <Group>
                <children>
@@ -51,6 +51,6 @@
           <TableColumn prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
-      <Button layoutX="491.0" layoutY="361.0" mnemonicParsing="false" text="Neuer Patient" />
+      <Button layoutX="491.0" layoutY="361.0" mnemonicParsing="false" text="Neuer Patient" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="20.0" />
    </children>
 </AnchorPane>
