--- a/Patientenverwaltung/src/ch/gbssg/app/ila/doctor/Doctor.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/ila/doctor/Doctor.fxml
@@ -7,50 +7,125 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <AnchorPane prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Group>
+            <VBox spacing="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="80.0">
                <children>
-                  <TextField layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
-                  <Label text="Nachname" />
+                  <Group>
+                     <children>
+                        <TextField layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
+                        <Label text="Nachname" />
+                     </children>
+                  </Group>
+                  <Group>
+                     <children>
+                        <TextField layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
+                        <Label text="Vorname" />
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </Group>
+                  <Group>
+                     <children>
+                        <Label text="Geb." />
+                        <DatePicker layoutX="97.0" layoutY="-4.0" />
+                     </children>
+                  </Group>
+                  <Group>
+                     <children>
+                        <TextField layoutX="97.0" layoutY="-4.0" prefHeight="25.0" prefWidth="175.0" />
+                        <Label text="AHV" />
+                     </children>
+                  </Group>
                </children>
-            </Group>
-            <Group>
-               <children>
-                  <TextField layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
-                  <Label text="Vorname" />
-               </children>
-               <VBox.margin>
+               <opaqueInsets>
                   <Insets />
-               </VBox.margin>
-            </Group>
-            <Group>
+               </opaqueInsets>
+            </VBox>
+            <FlowPane alignment="CENTER_RIGHT" hgap="10.0" prefHeight="46.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
                <children>
-                  <Label text="Geb." />
-                  <DatePicker layoutX="97.0" layoutY="-4.0" />
+                  <Button mnemonicParsing="false" text="Suchen" />
+                  <Button mnemonicParsing="false" text="Zurücksetzen" />
                </children>
-            </Group>
-            <Group>
-               <children>
-                  <TextField layoutX="97.0" layoutY="-4.0" prefHeight="25.0" prefWidth="175.0" />
-                  <Label text="AHV" />
-               </children>
-            </Group>
+            </FlowPane>
+            <Label layoutX="20.0" layoutY="49.0" text="Patienten Datenbank durchsuchen:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="40.0" />
          </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </VBox>
-      <Button layoutX="237.0" layoutY="361.0" mnemonicParsing="false" text="Suchen" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="237.0" />
-      <Button layoutX="140.0" layoutY="361.0" mnemonicParsing="false" text="Zurücksetzen" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="140.0" />
-      <TableView layoutX="315.0" layoutY="20.0" prefHeight="330.0" prefWidth="265.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="315.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-      <Button layoutX="491.0" layoutY="361.0" mnemonicParsing="false" text="Neuer Patient" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="20.0" />
+      </AnchorPane>
+      <SplitPane dividerPositions="0.38403614457831325" layoutX="335.0" layoutY="6.0" prefHeight="554.0" prefWidth="462.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="320.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <TableView fx:id="patientTable" layoutX="90.0" layoutY="208.0" minWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="firstnameCol" prefWidth="75.0" text="Vorname" />
+                      <TableColumn fx:id="lastnameCol" prefWidth="75.0" text="Nachname" />
+                        <TableColumn fx:id="ahvCol" prefWidth="75.0" text="AHV" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+          <AnchorPane maxWidth="400.0" minWidth="400.0">
+               <children>
+                  <Label layoutX="34.0" layoutY="40.0" text="Patienten Detail:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="40.0" />
+                  <VBox layoutX="30.0" layoutY="96.0" prefHeight="200.0" prefWidth="349.0" spacing="10.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="80.0">
+                     <children>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="Vorname" />
+                              <Label fx:id="firstname" text="Vorname" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="Nachname" />
+                              <Label fx:id="lastname" text="Nachname" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="Geburtsdatum" />
+                              <Label fx:id="birthday" text="Geburtsdatum" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="AHV" />
+                              <Label fx:id="ahv" text="AHV" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="PLZ" />
+                              <Label fx:id="plz" text="PLZ" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="Ort" />
+                              <Label fx:id="place" text="Ort" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label prefWidth="150.0" text="Adresse" />
+                              <Label fx:id="address" text="Adresse" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <FlowPane alignment="CENTER_RIGHT" hgap="10.0" layoutX="30.0" layoutY="360.0" prefHeight="46.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="Löschen" />
+                        <Button mnemonicParsing="false" text="Bearbeiten" />
+                        <Button mnemonicParsing="false" text="Neuer Patient" />
+                     </children>
+                  </FlowPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
