Prepared the KV Dialog and the model for displaying data.

--- a/Patientenverwaltung/src/ch/gbssg/app/ila/kv/Kv.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/ila/kv/Kv.fxml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="14.0" layoutY="26.0" text="Kv Panel" />
-      <Button layoutX="526.0" layoutY="59.0" mnemonicParsing="false" text="Button" />
-      <TableView layoutX="14.0" layoutY="92.0" prefHeight="249.0" prefWidth="563.0">
+      <Label layoutX="14.0" layoutY="28.0" text="Filter">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Button layoutX="494.0" layoutY="133.0" mnemonicParsing="false" text="Filter setzen" />
+      <TableView fx:id="faktTable" layoutX="14.0" layoutY="185.0" prefHeight="249.0" prefWidth="677.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+            <TableColumn fx:id="dateFromCol" prefWidth="107.0" text="Untersuch vom" />
+          <TableColumn fx:id="firstnameCol" editable="false" prefWidth="74.0" text="Name" />
+          <TableColumn fx:id="lastnameCol" editable="false" prefWidth="75.0" text="Vorname" />
+            <TableColumn fx:id="insuranceNumberCol" editable="false" prefWidth="96.0" text="Vers. Nummer" />
+            <TableColumn fx:id="placeCol" editable="false" prefWidth="89.0" text="Ort" />
+            <TableColumn fx:id="plzCol" editable="false" prefWidth="61.0" text="PLZ" />
+            <TableColumn fx:id="streetCol" editable="false" prefWidth="107.0" text="Strasse" />
+            <TableColumn fx:id="billStateCol" prefWidth="67.0" text="Status" />
         </columns>
       </TableView>
+      <Label layoutX="14.0" layoutY="49.0" text="Rechnungsstatus" />
+      <Label layoutX="14.0" layoutY="87.0" text="Rechnungsdatum" />
+      <TextField layoutX="180.0" layoutY="83.0" />
+      <TextField layoutX="425.0" layoutY="83.0" />
+      <Label layoutX="146.0" layoutY="87.0" text="von" />
+      <Label layoutX="397.0" layoutY="87.0" text="bis" />
+      <ComboBox layoutX="144.0" layoutY="45.0" prefHeight="25.0" prefWidth="186.0" />
    </children>
 </AnchorPane>
