--- a/Patientenverwaltung/src/ch/gbssg/app/ila/kv/Kv.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/ila/kv/Kv.fxml
@@ -14,7 +14,7 @@
             <Font name="System Bold" size="12.0" />
          </font></Label>
       <Button layoutX="611.0" layoutY="133.0" mnemonicParsing="false" text="Filter setzen" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="133.0" />
-      <TableView fx:id="faktTable" layoutX="14.0" layoutY="185.0" prefHeight="249.0" prefWidth="677.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="185.0">
+      <TableView fx:id="faktTable" layoutX="14.0" layoutY="185.0" prefHeight="248.0" prefWidth="677.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="185.0">
         <columns>
             <TableColumn fx:id="dateFromCol" prefWidth="107.0" text="Untersuch vom" />
           <TableColumn fx:id="firstnameCol" editable="false" prefWidth="74.0" text="Name" />
@@ -25,13 +25,18 @@
             <TableColumn fx:id="streetCol" editable="false" prefWidth="107.0" text="Strasse" />
             <TableColumn fx:id="billStateCol" prefWidth="67.0" text="Status" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
       <Label layoutX="14.0" layoutY="49.0" text="Rechnungsstatus" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="49.0" />
       <Label layoutX="14.0" layoutY="87.0" text="Rechnungsdatum" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="87.0" />
-      <TextField layoutX="180.0" layoutY="83.0" AnchorPane.leftAnchor="180.0" AnchorPane.topAnchor="83.0" />
-      <TextField layoutX="542.0" layoutY="83.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="83.0" />
       <Label layoutX="146.0" layoutY="87.0" text="von" AnchorPane.leftAnchor="146.0" AnchorPane.topAnchor="87.0" />
       <Label layoutX="514.0" layoutY="87.0" text="bis" AnchorPane.rightAnchor="183.0" AnchorPane.topAnchor="87.0" />
       <ComboBox layoutX="144.0" layoutY="45.0" prefHeight="25.0" prefWidth="186.0" AnchorPane.leftAnchor="144.0" AnchorPane.topAnchor="45.0" />
+      <DatePicker layoutX="171.0" layoutY="83.0" AnchorPane.leftAnchor="171.0" AnchorPane.topAnchor="83.0" />
+      <DatePicker layoutX="537.0" layoutY="83.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="83.0" />
+      <Button layoutX="634.0" layoutY="439.0" mnemonicParsing="false" text="Drucken" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="22.0" />
+      <Button layoutX="537.0" layoutY="439.0" mnemonicParsing="false" text="Status ändern" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="92.0" />
    </children>
 </AnchorPane>
