--- a/Patientenverwaltung/src/ch/gbssg/app/bla/user/User.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/bla/user/User.fxml
@@ -5,22 +5,21 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="266.0" prefWidth="282.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="266.0" prefWidth="282.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="194.0" layoutY="232.0" mnemonicParsing="false" text="Abbrechen" />
-      <Button layoutX="118.0" layoutY="232.0" mnemonicParsing="false" text="Speichern" />
-      <TextField layoutX="80.0" layoutY="26.0" prefHeight="25.0" prefWidth="185.0" />
+      <Button fx:id="btnCancel" layoutX="194.0" layoutY="232.0" mnemonicParsing="false" text="Abbrechen" />
+      <Button fx:id="btnSave" layoutX="118.0" layoutY="232.0" mnemonicParsing="false" text="Speichern" />
+      <TextField fx:id="txtFirstname" layoutX="80.0" layoutY="26.0" prefHeight="25.0" prefWidth="185.0" />
       <Label layoutX="10.0" layoutY="30.0" text="Name" />
       <Label layoutX="10.0" layoutY="60.0" text="Vorname" />
-      <TextField layoutX="80.0" layoutY="56.0" prefHeight="25.0" prefWidth="185.0" />
-      <TextField layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="163.0" />
+      <TextField fx:id="txtlastname" layoutX="80.0" layoutY="56.0" prefHeight="25.0" prefWidth="185.0" />
+      <TextField fx:id="txtUsername" layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="163.0" />
       <Label layoutX="10.0" layoutY="92.0" text="Benutzername" />
       <Label layoutX="10.0" layoutY="126.0" text="Passwort" />
-      <TextField layoutX="80.0" layoutY="122.0" prefHeight="25.0" prefWidth="185.0" />
-      <TextField layoutX="91.0" layoutY="155.0" prefHeight="25.0" prefWidth="174.0" />
+      <TextField fx:id="txtPassword" layoutX="80.0" layoutY="122.0" prefHeight="25.0" prefWidth="185.0" />
+      <TextField fx:id="txtHourlyWage" layoutX="91.0" layoutY="155.0" prefHeight="25.0" prefWidth="174.0" />
       <Label layoutX="10.0" layoutY="159.0" text="Stundenlohn" />
       <Label layoutX="10.0" layoutY="190.0" text="Rolle" />
-      <ComboBox layoutX="79.0" layoutY="186.0" prefHeight="25.0" prefWidth="185.0" />
+      <ComboBox fx:id="cboCodes" layoutX="79.0" layoutY="186.0" prefHeight="25.0" prefWidth="185.0" />
    </children>
 </AnchorPane>
