--- a/Patientenverwaltung/src/ch/gbssg/app/tla/RootWindow.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/tla/RootWindow.fxml
@@ -11,8 +11,8 @@
         <menus>
           <Menu mnemonicParsing="false" text="Tools">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Abmelden" />
-              <MenuItem mnemonicParsing="false" text="Schliessen" />
+                  <MenuItem mnemonicParsing="false" onAction="#logout" text="Abmelden" />
+              <MenuItem mnemonicParsing="false" onAction="#close" text="Schliessen" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Hilfe">
