--- a/Patientenverwaltung/src/ch/gbssg/app/bla/user/User.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/bla/user/User.fxml
@@ -16,10 +16,10 @@
       <TextField fx:id="txtUsername" layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="163.0" />
       <Label layoutX="10.0" layoutY="92.0" text="Benutzername" />
       <Label layoutX="10.0" layoutY="126.0" text="Passwort" />
-      <TextField fx:id="txtPassword" layoutX="80.0" layoutY="122.0" prefHeight="25.0" prefWidth="185.0" />
       <TextField fx:id="txtHourlyWage" layoutX="91.0" layoutY="155.0" prefHeight="25.0" prefWidth="174.0" />
       <Label layoutX="10.0" layoutY="159.0" text="Stundenlohn" />
       <Label layoutX="10.0" layoutY="190.0" text="Rolle" />
       <ComboBox fx:id="cboCodes" layoutX="79.0" layoutY="186.0" prefHeight="25.0" prefWidth="185.0" />
+      <PasswordField fx:id="txtPassword" layoutX="78.0" layoutY="122.0" prefHeight="25.0" prefWidth="185.0" />
    </children>
 </AnchorPane>
