--- a/Patientenverwaltung/src/ch/gbssg/app/tla/Login.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/tla/Login.fxml
@@ -21,7 +21,7 @@
       <Label layoutX="85.0" layoutY="157.0" text="Benutzername" AnchorPane.leftAnchor="85.0" />
       <Label layoutX="85.0" layoutY="197.0" text="Passwort" AnchorPane.leftAnchor="85.0" />
       <TextField fx:id="txtUsername" layoutX="182.0" layoutY="153.0" prefHeight="25.0" AnchorPane.leftAnchor="215.0" AnchorPane.rightAnchor="86.0" />
-      <TextField fx:id="txtPassword" layoutX="182.0" layoutY="193.0" prefHeight="25.0" AnchorPane.leftAnchor="215.0" AnchorPane.rightAnchor="86.0" />
+      <PasswordField fx:id="txtPassword" layoutX="215.0" layoutY="193.0" AnchorPane.leftAnchor="215.0" AnchorPane.rightAnchor="86.0" />
       <Button layoutX="85.0" layoutY="250.0" mnemonicParsing="false" onAction="#Login" prefHeight="25.0" prefWidth="318.0" text="Login" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="86.0" AnchorPane.topAnchor="250.0" />
       <Label layoutX="20.0" layoutY="339.0" prefHeight="17.0" prefWidth="59.0" text="Version 1.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="20.0" />
       <Label layoutX="20.0" layoutY="316.0" text="Autor: Michael &amp; Sandro" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="20.0" />
