Prepared the App to be compiled as Jar 	- Fixed all wrong path 	- Fixed the Project setup (Including fxml, xml files etc..)

--- a/Patientenverwaltung/src/ch/gbssg/app/tla/Login.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/tla/Login.fxml
@@ -10,7 +10,7 @@
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <ImageView fitHeight="105.0" fitWidth="405.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgBanner" fitHeight="105.0" fitWidth="405.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../resource/logo.jpg" />
                </image>
