--- a/Patientenverwaltung/src/ch/gbssg/app/ila/doctor/Doctor.fxml
+++ b/Patientenverwaltung/src/ch/gbssg/app/ila/doctor/Doctor.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="986.0" prefHeight="562.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="986.0" prefHeight="562.0" prefWidth="1045.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -16,13 +16,13 @@
                <children>
                   <Group>
                      <children>
-                        <TextField layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
+                        <TextField fx:id="searchLastname" layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
                         <Label text="Nachname" />
                      </children>
                   </Group>
                   <Group>
                      <children>
-                        <TextField layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
+                        <TextField fx:id="searchFirstname" layoutX="97.0" layoutY="-4.0" prefWidth="175.0" />
                         <Label text="Vorname" />
                      </children>
                      <VBox.margin>
@@ -32,12 +32,12 @@
                   <Group>
                      <children>
                         <Label text="Geb." />
-                        <DatePicker layoutX="97.0" layoutY="-4.0" />
+                        <DatePicker fx:id="searchBDate" layoutX="97.0" layoutY="-4.0" />
                      </children>
                   </Group>
                   <Group>
                      <children>
-                        <TextField layoutX="97.0" layoutY="-4.0" prefHeight="25.0" prefWidth="175.0" />
+                        <TextField fx:id="searchAhv" layoutX="97.0" layoutY="-4.0" prefHeight="25.0" prefWidth="175.0" />
                         <Label text="AHV" />
                      </children>
                   </Group>
@@ -58,18 +58,21 @@
                </font></Label>
          </children>
       </AnchorPane>
-      <SplitPane dividerPositions="0.3930722891566265" layoutX="335.0" layoutY="6.0" prefHeight="554.0" prefWidth="462.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="320.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.4190871369294606" layoutX="335.0" layoutY="6.0" prefHeight="554.0" prefWidth="462.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="320.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane maxWidth="300.0" minWidth="300.0">
                <children>
                   <TableView fx:id="patientTable" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn fx:id="firstnameCol" prefWidth="75.0" text="Vorname" />
-                      <TableColumn fx:id="lastnameCol" prefWidth="69.0" text="Nachname" />
+                      <TableColumn fx:id="firstnameCol" prefWidth="102.0" text="Vorname" />
+                      <TableColumn fx:id="lastnameCol" prefWidth="183.0" text="Nachname" />
                         <TableColumn fx:id="ahvCol" maxWidth="124.0" prefWidth="104.0" resizable="false" text="AHV" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
-                  <FlowPane alignment="CENTER_RIGHT" hgap="10.0" layoutX="-38.0" layoutY="513.0" prefHeight="46.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+                  <FlowPane alignment="CENTER_RIGHT" hgap="10.0" layoutX="22.0" layoutY="513.0" prefHeight="50.0" prefWidth="248.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="30.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#deletePatient" text="Löschen" />
                         <Button mnemonicParsing="false" onAction="#updatePatient" text="Bearbeiten" />
@@ -78,7 +81,7 @@
                   </FlowPane>
                </children>
             </AnchorPane>
-          <AnchorPane>
+          <AnchorPane prefHeight="560.0" prefWidth="392.0">
                <children>
                   <Label layoutX="34.0" layoutY="40.0" text="Patienten Detail:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="40.0">
                      <font>
@@ -140,12 +143,15 @@
                         <Font size="13.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="medicalHistoryTable" layoutX="30.0" layoutY="328.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="320.0">
+                  <TableView fx:id="medicalHistoryTable" layoutX="30.0" layoutY="328.0" onMousePressed="#MedHTableDblClicked" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="320.0">
                     <columns>
                       <TableColumn fx:id="symptomsCol" prefWidth="136.0" text="Symptome" />
                       <TableColumn fx:id="diagnosticCol" minWidth="5.0" prefWidth="71.0" text="Diagnose" />
                         <TableColumn fx:id="notesCol" prefWidth="72.0" text="Bemerkung" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                   <FlowPane alignment="CENTER_RIGHT" hgap="10.0" layoutX="20.0" layoutY="277.0" prefHeight="46.0" prefWidth="400.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="277.0">
                      <children>
